Add warn system

--- a/config.json
+++ b/config.json
@@ -11,5 +11,9 @@
         "Rank",
         "Logger",
         "Status"
+    ],
+    "ops": [
+        "603897276410101789",
+        "751073808223305750"
     ]
 }
