--- a/config.json
+++ b/config.json
@@ -2,16 +2,15 @@
 	"clientId": "873118847597690920",
 	"intents": "11111111111111",
     "submodules": [
-        "Toto",
-        "Report",
-        "Moderator",
-        "Youtube",
-        "ReactionRole",
+        "Logger",
         "MessageManager",
+        "Moderator",
         "Raid",
         "Rank",
-        "Logger",
-        "Status"
+        "ReactionRole",
+        "Report",
+        "Status",
+        "Youtube"
     ],
     "ops": [
         "603897276410101789",
