--- a/localtunnel.service
+++ b/localtunnel.service
@@ -5,5 +5,8 @@ Description=Localtunnel Service
 ExecStart=/bin/bash -c 'PATH="$PATH:BIN_PATH";./ltrun.sh'
 WorkingDirectory=BOTORY_PATH
 
+Restart=on-failure
+RestartSec=3s
+
 [Install]
 WantedBy=multi-user.target
